--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-django==2.2.5
-django-debug-toolbar==1.8
-gunicorn==19.4.5
-psycopg2==2.7.3.1
-whitenoise==3.3.1
+asgiref==3.6.0
+Django==4.1.7
+sqlparse==0.4.3
+tzdata==2022.7
+python-decouple==3.6
