--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-SECRET_KEY = xthx9h_wxp)i9=b&!*g=14fgalrsi-1_-)^0*_yo+b58)v=431'
+SECRET_KEY = xthx9h_wxp)i9=b&!*g=14fgalrsi-1_-)^0*_yo+b58)v=431£
+FERNET_KEY = r3aeaL_xfrHAH2XSYGh-RrozjioZ9tCZQcDUBkyOFTI=
 DEBUG = True
 ALLOWED_HOSTS = *
