--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 asgiref==3.6.0
-Django==4.1.7
+cffi==1.15.1
+cryptography==40.0.1
+Django==4.2
 django-crispy-forms==1.14.0
-django_debug_toolbar==3.8.1
-Faker==18.3.1
-Pillow==9.4.0
-psycopg2==2.9.5
+django-debug-toolbar==4.0.0
+Faker==18.4.0
+Pillow==9.5.0
+psycopg2==2.9.6
+pycparser==2.21
 python-dateutil==2.8.2
-python-decouple==3.6
+python-decouple==3.8
 six==1.16.0
 sqlparse==0.4.3
-tzdata==2022.7
+typing_extensions==4.5.0
+tzdata==2023.3
